--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,23 @@
 <resources>
 
     <string name="app_name">Sunshine</string>
+
     <string name="hello_world">Hello world!</string>
+
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
+
     <string name="title_activity_detail">Details</string>
+
     <string name="title_activity_settings">Settings</string>
+
     <string name="pref_location_label">Location</string>
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_default" translatable="false">08816</string>
+
+    <string name="pref_units_label" translatable="false">Units</string>
+    <string name="pref_units_key" translatable="false">units</string>
+    <string name="pref_units_metric">Metric</string>
+    <string name="pref_units_imperial">Imperial</string>
 
 </resources>
