--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,11 +26,6 @@
     <string name="pref_units_metric">Metric</string>
     <string name="pref_units_imperial">Imperial</string>
 
-    <!-- Notification Format -->
-    <string name="format_notification">
-        Forecast for today: %1$s with a high of %2$s and low of %3$s.
-    </string>
-
     <string name="action_map">Map Location</string>
 
     <string name="action_share">Share</string>
@@ -76,4 +71,12 @@
     <string name="sync_account_type">sunshine.example.com</string>
     <string name="content_authority">com.example.android.sunshine.app</string>
 
+
+    <!-- Notification Format -->
+    <string name="format_notification">
+        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
+    </string>
+
+    <!-- Strings related to Notification preference -->
+    <string name="pref_last_notification">last_notification</string>
 </resources>
